--- a/04-Components/02-carousel.html
+++ b/04-Components/02-carousel.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carousel</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="carousel">
+      <img
+        class="image"
+        src="https://assets.vogue.com/photos/5f5929030421c3a9abcb762c/master/w_2560%2Cc_limit/maria_tash_1.jpg"
+        alt=""
+      />
+      <blockquote class="testimonial">
+        <p class="text">
+          "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+          reprehenderit mollitia, repudiandae, cupiditate hic eligendi,
+          repellendus id velit nisi repellat aspernatur. Possimus delectus
+          voluptates suscipit libero et recusandae quos saepe."
+        </p>
+        <p class="author">Maria De Almeida</p>
+        <p class="job">Senior Product Manager at EDP Comercial</p>
+      </blockquote>
+      <button class="btn btn--left">
+        <i class="fa-solid fa-chevron-left left-icon"></i>
+      </button>
+      <button class="btn btn--rigth">
+        <i class="fa-solid fa-chevron-right right-icon"></i>
+      </button>
+      <div class="dots">
+        <button class="dot dot--fill">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+      </div>
+    </div>
+  </body>
 </html>
